WIP Adopt RootedKeyValueAccess