@@ -53,8 +53,6 @@ import org.janelia.saalfeldlab.n5.Compression;
 import org.janelia.saalfeldlab.n5.DataBlock;
 import org.janelia.saalfeldlab.n5.DataType;
 import org.janelia.saalfeldlab.n5.DatasetAttributes;
-import org.janelia.saalfeldlab.n5.FileSystemKeyValueAccess;
-import org.janelia.saalfeldlab.n5.FileSystemRootedKeyValueAccess;
 import org.janelia.saalfeldlab.n5.GzipCompression;
 import org.janelia.saalfeldlab.n5.KeyValueAccess;
 import org.janelia.saalfeldlab.n5.N5Exception;
@@ -64,6 +62,7 @@ import org.janelia.saalfeldlab.n5.N5Reader.Version;
 import org.janelia.saalfeldlab.n5.N5Writer;
 import org.janelia.saalfeldlab.n5.NameConfigAdapter;
 import org.janelia.saalfeldlab.n5.RawCompression;
+import org.janelia.saalfeldlab.n5.RootedFileSystemKeyValueAccess;
 import org.janelia.saalfeldlab.n5.StringDataBlock;
 import org.janelia.saalfeldlab.n5.blosc.BloscCompression;
 import org.janelia.saalfeldlab.n5.imglib2.N5Utils;
@@ -101,10 +100,6 @@ public class ZarrV3Test extends AbstractN5Test {
 
 	static private final String testZarrDatasetName = "/test/data";
 
-	public static KeyValueAccess createKeyValueAccess() {
-		return new FileSystemKeyValueAccess();
-	}
-
 	@Override
 	protected String tempN5Location() {
 
@@ -119,7 +114,7 @@ public class ZarrV3Test extends AbstractN5Test {
 	protected N5Writer createN5Writer()  {
 
 		final String testDirPath = tempN5Location();
-		return new ZarrV3KeyValueWriter(createKeyValueAccess(), new FileSystemRootedKeyValueAccess(testDirPath), testDirPath, new GsonBuilder(), true);
+		return new ZarrV3KeyValueWriter(new RootedFileSystemKeyValueAccess(testDirPath), new GsonBuilder(), true);
 	}
 
 	@Override
@@ -145,7 +140,7 @@ public class ZarrV3Test extends AbstractN5Test {
 			final String dimensionSeparator,
 			final boolean cacheAttributes) {
 
-		final ZarrV3KeyValueWriter tempWriter = new ZarrV3KeyValueWriter(createKeyValueAccess(), new FileSystemRootedKeyValueAccess(location), location, gsonBuilder, cacheAttributes);
+		final ZarrV3KeyValueWriter tempWriter = new ZarrV3KeyValueWriter(new RootedFileSystemKeyValueAccess(location), gsonBuilder, cacheAttributes);
 		tempWriters.add(tempWriter);
 		return tempWriter;
 	}
@@ -153,7 +148,7 @@ public class ZarrV3Test extends AbstractN5Test {
 	@Override
 	protected N5Reader createN5Reader(final String location, final GsonBuilder gson) throws IOException {
 
-		return new ZarrV3KeyValueReader(createKeyValueAccess(), new FileSystemRootedKeyValueAccess(location), location, gson, false);
+		return new ZarrV3KeyValueReader(new RootedFileSystemKeyValueAccess(location), gson, false);
 	}
 
 	@Override
@@ -196,7 +191,7 @@ public class ZarrV3Test extends AbstractN5Test {
 
 		final String path = "src/test/resources/shardExamples/test.zarr/mid_sharded";
 		try (ZarrV3KeyValueReader n5 = new ZarrV3KeyValueReader(
-				new FileSystemKeyValueAccess(), new FileSystemRootedKeyValueAccess(path), path, addZarrAdapters(new GsonBuilder()), true)) {
+				new RootedFileSystemKeyValueAccess(path), addZarrAdapters(new GsonBuilder()), true)) {
 
 			final ChunkGrid chunkGrid = n5.getAttribute("/", "chunk_grid", ChunkGrid.class);
 			final ChunkKeyEncoding chunkKeyEncoding = n5.getAttribute("/", "chunk_key_encoding", ChunkKeyEncoding.class);
@@ -753,19 +748,19 @@ public class ZarrV3Test extends AbstractN5Test {
 
 			Assert.assertEquals(3, n5.listAttributes(groupName).size());
 			/* class interface */
-			Assert.assertEquals(new Integer(1), n5.getAttribute(groupName, "key1", Integer.class));
-			Assert.assertEquals(new Integer(2), n5.getAttribute(groupName, "key2", Integer.class));
+			Assert.assertEquals(Integer.valueOf(1), n5.getAttribute(groupName, "key1", Integer.class));
+			Assert.assertEquals(Integer.valueOf(2), n5.getAttribute(groupName, "key2", Integer.class));
 			Assert.assertEquals("value3", n5.getAttribute(groupName, "key3", String.class));
 			/* type interface */
 			Assert
 					.assertEquals(
-							new Integer(1),
+							Integer.valueOf(1),
 							n5.getAttribute(groupName, "key1", new TypeToken<Integer>() {
 
 							}.getType()));
 			Assert
 					.assertEquals(
-							new Integer(2),
+							Integer.valueOf(2),
 							n5.getAttribute(groupName, "key2", new TypeToken<Integer>() {
 
 							}.getType()));
